--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
  
      <!-- Site Metas -->
-    <title>MD. MAJIDUL ISLAM - Responsive AI Engineer & MLOps Portfolio</title>  
+    <title>MD. MAJIDUL ISLAM - AI Engineer & MLOps Expert</title>  
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -82,7 +82,7 @@
 	<section id="home" class="main-banner parallaxie" style="background: url('uploads/banner.jpg')">
 		<div class="heading">
 			<h1>hello i'm MD. MAJIDUL ISLAM</h1>
-			<p>"Let Your Faith be , <br> Bigger Than your Fear"</p>
+			<p>"Let Your Faith be <br> Bigger Than your Fear"</p>
 			<h3 class="cd-headline clip is-full-width">
 				<span>Who I am ? I am  </span>
 				<span class="cd-words-wrapper">
@@ -127,9 +127,9 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="message-box">                        
-                        <h2>About MD. MAJIDUL ISLAM.</h2>
+                        <h2>About Me</h2>
                         <p>Skilled AI Engineer & MLOps Expert with expertise in Python, FastAPI and cloud-based AI solutions and Automation. Strong background in AI development, DevOps, Automation and software engineering with a proven track record of successfully integrating Azure Cognitive Services, MongoDB and CrewAI to enhance conversational AI capabilities. Also Project management in monday.com, Jira with Automation with Make and Zapier.</p>
-						<p>Sed vitae rutrum neque. Ut id erat sit amet libero bibendum aliquam. Donec ac egestas libero, eu bibendum risus. Phasellus et congue justo.</p>
+						<p>Led the development of agent-based AI systems for healthcare and education, enabling adaptive conversation flows and preventive care planning using multi-agent CrewAI systems.</p>
 
                         <a href="uploads/MajidulislamCV.pdf" class="sim-btn btn-hover-new" data-text="Download CV" download><span>Download CV</span></a>
                     </div><!-- end messagebox -->
