--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
 				
 				<div class="col-md-4 col-sm-6 gallery-grid processor">
 					<div class="gallery-single fix">
-						<img src="uploads/forecast.png" class="img-fluid" alt="Medicine Processor">
+						<img src="uploads/medProcessorr.png" class="img-fluid" alt="Medicine Processor">
 						<div class="img-overlay">
 							<div class="project-overlay-text">
 								<h4>DMD+D Medicine AI Processor</h4>
