--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 			<h1>hello i'm MD. MAJIDUL ISLAM</h1>
 			<p>"Let Your Faith be <br> Bigger Than your Fear"</p>
 			<h3 class="cd-headline clip is-full-width">
-				<span>Who I am ? I am  </span>
+				<span>Who am I ? I am  </span>
 				<span class="cd-words-wrapper">
 					<b class="is-visible">AI Specialist</b>
                     <b>Generative AI Expert</b>
