--- a/index.html
+++ b/index.html
@@ -42,19 +42,19 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="Majidul Islam Murad | AI Engineer in Bangladesh">
     <meta property="og:description" content="Portfolio of Majidul Islam Murad, AI Engineer, MLOps Expert, and AI Specialist in Bangladesh. View projects, skills, and experience.">
-    <meta property="og:image" content="https://yourdomain.com/uploads/profile_picture.jpg">
-    <meta property="og:url" content="https://yourdomain.com/">
+    <meta property="og:image" content="https://mazidulmurad.xyz/uploads/profile_picture.jpg">
+    <meta property="og:url" content="https://mazidulmurad.xyz/">
     <meta property="og:site_name" content="Majidul Islam Murad Portfolio">
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Majidul Islam Murad | AI Engineer in Bangladesh">
     <meta name="twitter:description" content="Portfolio of Majidul Islam Murad, AI Engineer, MLOps Expert, and AI Specialist in Bangladesh. View projects, skills, and experience.">
-    <meta name="twitter:image" content="https://yourdomain.com/uploads/profile_picture.jpg">
+    <meta name="twitter:image" content="https://mazidulmurad.xyz/uploads/profile_picture.jpg">
     <meta name="twitter:site" content="@yourtwitterhandle">
 
     <!-- Canonical URL -->
-    <link rel="canonical" href="https://yourdomain.com/" />
+    <link rel="canonical" href="https://mazidulmurad.xyz/" />
 
     <!-- JSON-LD Structured Data -->
     <script type="application/ld+json">
@@ -64,8 +64,8 @@
       "name": "Majidul Islam Murad",
       "alternateName": ["Majidul Murad", "Majidul Islam"],
       "jobTitle": ["AI Engineer", "MLOps Expert", "AI Specialist"],
-      "image": "https://yourdomain.com/uploads/profile_picture.jpg",
-      "url": "https://yourdomain.com/",
+      "image": "https://mazidulmurad.xyz/uploads/profile_picture.jpg",
+      "url": "https://mazidulmurad.xyz/",
       "sameAs": [
         "https://www.linkedin.com/in/majidulislammurad/",
         "https://github.com/Majidul17068"
