--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 	
 	<section id="home" class="main-banner parallaxie" style="background: url('uploads/banner_optimized.jpg')">
 		<div class="heading">
-			<h1>Hello, I'm Majidul Islam Murad - AI Engineer in Bangladesh</h1>
+			<h1>Hello, I'm Majidul Islam Murad - AI Engineer</h1>
 			<p>"Let Your Faith be <br> Bigger Than your Fear"</p>
 			<h3 class="cd-headline clip is-full-width">
 				<span>Who am I ? I am  </span>
