--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
     <meta name="twitter:description" content="Portfolio of Majidul Islam Murad, AI Engineer, MLOps Expert, and AI Specialist in Bangladesh. View projects, skills, and experience.">
     <meta name="twitter:image" content="https://mazidulmurad.xyz/uploads/profile_picture.jpg">
     <meta name="twitter:site" content="@yourtwitterhandle">
+    <meta name="google-site-verification" content="od7lCfdGGN3A9uvQ2jYx3HZ4vWHhBjO_cd9FvqseuGE" />
 
     <!-- Canonical URL -->
     <link rel="canonical" href="https://mazidulmurad.xyz/" />
@@ -81,6 +82,14 @@
 </head>
 <body id="page-top" class="politics_version">
 
+<div id="particles-js"></div>
+
+<!-- 
+==================================================
+Header Section Start
+================================================== -->
+<header id="top-bar" class="navbar-fixed-top animated-header">
+
     <!-- LOADER -->
     <div id="preloader">
         <div id="main-ld">
@@ -90,7 +99,7 @@
     <!-- END LOADER -->
 	
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav" style="background-color: transparent; min-height: 56px; transition: background 0.3s;">
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
       <div class="container">
         <a class="navbar-brand js-scroll-trigger" href="#page-top">
 			<img class="img-fluid" src="images/logo2.png" alt="Majidul Islam Murad - AI Engineer Portfolio" style="max-width: 120px; max-height: 40px; padding: 4px 0; margin: 0 auto; display: block; object-fit: contain;">
@@ -124,49 +133,32 @@
       </div>
     </nav>
 	
-	<section id="home" class="main-banner parallaxie" style="background: url('uploads/banner_optimized.jpg')">
-		<div class="heading">
-			<h1>Hello, I'm Majidul Islam Murad - AI Engineer</h1>
-			<p>"Let Your Faith be <br> Bigger Than your Fear"</p>
-			<h3 class="cd-headline clip is-full-width">
-				<span>Who am I ? I am  </span>
-				<span class="cd-words-wrapper">
-					<b class="is-visible">AI Specialist</b>
-                    <b>Generative AI Expert</b>
-					<b>ML Engineer</b>
-                    <b>MLOps Expert</b>
-					<b>Data Science Expert</b>
-                    <b>Advanced Automation Expert</b>
-				</span>
-			</h3>
+	<!-- START HOME -->
+	<section id="home" class="main-banner">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+					<div class="heading">
+						<h1>Hello, I'm Majidul Islam Murad - AI Engineer</h1>
+						<h3 class="cd-headline clip">
+							<span>Who am I ? I am </span>
+							<span class="cd-words-wrapper">
+								<b class="is-visible">GENERATIVE AI EXPERT</b>
+								<b>WEB DEVELOPER</b>
+								<b>GRAPHIC DESIGNER</b>
+							</span>
+						</h3>
+					</div>
+				</div>
+				<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+					<div class="banner-photo">
+						<img src="uploads/ban_photo.jpeg" alt="Majidul Islam Murad" class="img-fluid">
+					</div>
+				</div>
+			</div>
 		</div>
 	</section>
-
-	<svg id="clouds" class="hidden-xs" xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="100" viewBox="0 0 85 100" preserveAspectRatio="none">
-        <path d="M-5 100 Q 0 20 5 100 Z
-            M0 100 Q 5 0 10 100
-            M5 100 Q 10 30 15 100
-            M10 100 Q 15 10 20 100
-            M15 100 Q 20 30 25 100
-            M20 100 Q 25 -10 30 100
-            M25 100 Q 30 10 35 100
-            M30 100 Q 35 30 40 100
-            M35 100 Q 40 10 45 100
-            M40 100 Q 45 50 50 100
-            M45 100 Q 50 20 55 100
-            M50 100 Q 55 40 60 100
-            M55 100 Q 60 60 65 100
-            M60 100 Q 65 50 70 100
-            M65 100 Q 70 20 75 100
-            M70 100 Q 75 45 80 100
-            M75 100 Q 80 30 85 100
-            M80 100 Q 85 20 90 100
-            M85 100 Q 90 50 95 100
-            M90 100 Q 95 25 100 100
-            M95 100 Q 100 15 105 100 Z">
-        </path>
-    </svg>
-
+	
     <div id="about" class="section wb">
         <div class="container">
             <div class="row">
@@ -176,7 +168,7 @@
                         <p>Skilled AI Engineer & MLOps Expert with expertise in Python, FastAPI and cloud-based AI solutions and Automation. Strong background in AI development, DevOps, Automation and software engineering with a proven track record of successfully integrating Azure Cognitive Services, MongoDB and CrewAI to enhance conversational AI capabilities. Also Project management in monday.com, Jira with Automation with Make and Zapier.</p>
 						<p>Led the development of agent-based AI systems for healthcare and education, enabling adaptive conversation flows and preventive care planning using multi-agent CrewAI systems.</p>
 
-                        <a href="uploads/MajidulislamCV.pdf" class="sim-btn btn-hover-new" data-text="Download CV" download><span>Download CV</span></a>
+                        <a href="uploads/MajidulislamCV.pdf" class="btn-cv" download><i class="fa fa-download"></i> Download CV</a>
                     </div><!-- end messagebox -->
                 </div><!-- end col -->
 
@@ -406,30 +398,17 @@
 		</div>
 	</div>
 	
-    <div id="contact" class="section db">
+    <div id="contact" class="section lb" style="padding: 40px 0;">
         <div class="container">
-            <div class="section-title text-center">
-                <h2>Contact Majidul Islam Murad - AI Engineer in Bangladesh</h2>
-                <p style="font-size:1.1em; margin-bottom:32px;">Feel free to contact me for any AI engineering, MLOps, or automation projects. You can reach me directly via email, LinkedIn, or GitHub. For urgent matters, call: <a href="tel:+8801521498321" style="color:#e74c3c ; text-decoration:underline;">+8801521498321</a></p>
-            </div>
-            <div class="row justify-content-center">
-                <div class="col-md-8 text-center">
+            <div class="row">
+                <div class="col-md-12 text-center">
+                    <h2>Contact Majidul Islam Murad - AI Engineer in Bangladesh</h2>
+                    <p style="font-size:1.1em; margin-bottom:32px;">Feel free to contact me for any AI engineering, MLOps, or automation projects. You can reach me directly via email, LinkedIn, or GitHub.</p>
                     <div class="contact-btn-group">
                         <a href="https://github.com/Majidul17068" class="contact-btn" target="_blank">GITHUB</a>
                         <a href="mailto:contact.majidul.islam@gmail.com" class="contact-btn">MAIL</a>
                         <a href="https://www.linkedin.com/in/majidulislammurad/" class="contact-btn" target="_blank">LINKEDIN</a>
                     </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!-- SEO Footer Section -->
-    <div class="section lb" style="padding: 40px 0; background-color: #f8f9fa;">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12 text-center">
-                    <h3>Majidul Islam Murad - AI Engineer & MLOps Expert in Bangladesh</h3>
                     <p style="font-size: 1.1em; margin: 20px 0;">
                         Specializing in AI development, machine learning, MLOps, and automation solutions. 
                         Based in Dhaka, Bangladesh, I help businesses implement cutting-edge AI technologies 
@@ -440,8 +419,8 @@
                         Generative AI, Data Science, Cloud AI Solutions
                     </div>
                     <div style="margin: 20px 0;">
-                        <strong>Location:</strong> Dhaka, Bangladesh | <strong>Phone:</strong> +8801521498321 | 
-                        <strong>Email:</strong> contact.majidul.islam@gmail.com
+                        <strong>Location:</strong> Dhaka, Bangladesh | <strong>Phone:</strong> <a href="tel:+8801521498321">+8801521498321</a> | 
+                        <strong>Email:</strong> <a href="mailto:contact.majidul.islam@gmail.com">contact.majidul.islam@gmail.com</a>
                     </div>
                 </div>
             </div>
@@ -462,26 +441,15 @@
     <script src="js/all.js" defer></script>
 	<!-- Camera Slider -->
 	<script src="js/jquery.mobile.customized.min.js" defer></script>
-	<script src="js/jquery.easing.1.3.js" defer></script> 
+	<script src="js/jquery.easing.1.3.js" defer></script>
 	<script src="js/parallaxie.js" defer></script>
 	<script src="js/headline.js" defer></script>
-	<!-- Contact form JavaScript -->
-    <script src="js/jqBootstrapValidation.js" defer></script>
-    <script src="js/contact_me.js" defer></script>
-    <!-- ALL PLUGINS -->
+	<!-- ALL PLUGINS -->
     <script src="js/custom.js" defer></script>
     <script src="js/jquery.vide.js" defer></script>
 
-<script>
-window.addEventListener('scroll', function() {
-  var nav = document.getElementById('mainNav');
-  if (window.scrollY > 40) {
-    nav.style.backgroundColor = '#1b4f72';
-  } else {
-    nav.style.backgroundColor = 'transparent';
-  }
-});
-</script>
+<script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js" defer></script>
+<script src="js/app.js" defer></script>
 
 </body>
 </html>
