--- a/index.html
+++ b/index.html
@@ -143,9 +143,10 @@ Header Section Start
 						<h3 class="cd-headline clip">
 							<span>Who am I ? I am </span>
 							<span class="cd-words-wrapper">
-								<b class="is-visible">GENERATIVE AI EXPERT</b>
-								<b>WEB DEVELOPER</b>
-								<b>GRAPHIC DESIGNER</b>
+								<b class="is-visible">AI Specialist</b>
+								<b>Generative AI Expert</b>
+								<b>Data Science Expert</b>
+								<b>Advanced Automation Expert</b>
 							</span>
 						</h3>
 					</div>
