--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@ Header Section Start
                         <p>Skilled AI Engineer & MLOps Expert with expertise in Python, FastAPI and cloud-based AI solutions and Automation. Strong background in AI development, DevOps, Automation and software engineering with a proven track record of successfully integrating Azure Cognitive Services, MongoDB and CrewAI to enhance conversational AI capabilities. Also Project management in monday.com, Jira with Automation with Make and Zapier.</p>
 						<p>Led the development of agent-based AI systems for healthcare and education, enabling adaptive conversation flows and preventive care planning using multi-agent CrewAI systems.</p>
 
-                        <a href="uploads/MajidulislamCV.pdf" class="btn-cv" download><i class="fa fa-download"></i> Download CV</a>
+                        <a href="uploads/MajidIslamResume.pdf" class="btn-cv" download><i class="fa fa-download"></i> Download CV</a>
                     </div><!-- end messagebox -->
                 </div><!-- end col -->
 
