--- a/index.html
+++ b/index.html
@@ -53,6 +53,25 @@
 			transform: translateY(-5px);
 			box-shadow: 0 8px 25px rgba(0,0,0,0.2) !important;
 		}
+		
+		/* Navigation Button Styles */
+		.navbar-nav .nav-item {
+			margin: 0 5px;
+		}
+		.navbar-nav .nav-link {
+			border: 2px solid white !important;
+			border-radius: 5px !important;
+			padding: 8px 20px !important;
+			margin: 5px 0 !important;
+			transition: all 0.3s ease !important;
+			background: transparent !important;
+		}
+		.navbar-nav .nav-link:hover,
+		.navbar-nav .nav-link.active {
+			border-color: #ff6600 !important;
+			background: rgba(255, 102, 0, 0.1) !important;
+			color: #ff6600 !important;
+		}
 	</style>
 
     <!--[if lt IE 9]>
@@ -64,15 +83,16 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="Majidul Islam Murad | AI Engineer in Bangladesh">
     <meta property="og:description" content="Portfolio of Majidul Islam Murad, AI Engineer, MLOps Expert, and AI Specialist in Bangladesh. View projects, skills, and experience.">
-    <meta property="og:image" content="https://mazidulmurad.xyz/uploads/profile_picture.jpg">
+    <meta property="og:image" content="https://mazidulmurad.xyz/uploads/profile_picture.png">
     <meta property="og:url" content="https://mazidulmurad.xyz/">
     <meta property="og:site_name" content="Majidul Islam Murad Portfolio">
+
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Majidul Islam Murad | AI Engineer in Bangladesh">
-    <meta name="twitter:description" content="Portfolio of Majidul Islam Murad, AI Engineer, MLOps Expert, and AI Specialist in Bangladesh. View projects, skills, and experience.">
-    <meta name="twitter:image" content="https://mazidulmurad.xyz/uploads/profile_picture.jpg">
+    <meta name="twitter:description" content="Portfolio of Majidul Islam Murad, AI Engineer, MLOps Expert, and AI Specialist in Bangladesh. View projects, skills and experience.">
+    <meta name="twitter:image" content="https://mazidulmurad.xyz/uploads/profile_picture.png">
     <meta name="twitter:site" content="@yourtwitterhandle">
     <meta name="google-site-verification" content="od7lCfdGGN3A9uvQ2jYx3HZ4vWHhBjO_cd9FvqseuGE" />
 
@@ -87,7 +107,7 @@
       "name": "Majidul Islam Murad",
       "alternateName": ["Majidul Murad", "Majidul Islam"],
       "jobTitle": ["AI Engineer", "MLOps Expert", "AI Specialist"],
-      "image": "https://mazidulmurad.xyz/uploads/profile_picture.jpg",
+      "image": "https://mazidulmurad.xyz/uploads/profile_picture.png",
       "url": "https://mazidulmurad.xyz/",
       "sameAs": [
         "https://www.linkedin.com/in/majidulislammurad/",
@@ -156,7 +176,7 @@ Header Section Start
     </nav>
 	
 	<!-- START HOME -->
-	<section id="home" class="main-banner">
+	<section id="home" class="main-banner" style="padding-top: 100px;">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
@@ -174,8 +194,8 @@ Header Section Start
 					</div>
 				</div>
 				<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-					<div class="banner-photo">
-						<img src="uploads/ban_photo.jpeg" alt="Majidul Islam Murad" class="img-fluid">
+					<div class="banner-photo" style="max-width: 450px; margin: 0 auto;">
+						<img src="uploads/ban_photo.jpeg" alt="Majidul Islam Murad" class="img-fluid" style="border-radius: 15px; max-height: 500px; object-fit: cover; box-shadow: 0 10px 30px rgba(0,0,0,0.3);">
 					</div>
 				</div>
 			</div>
@@ -196,8 +216,8 @@ Header Section Start
                 </div><!-- end col -->
 
                 <div class="col-md-6">
-                    <div class="right-box-pro wow fadeIn">
-                        <img src="uploads/profile_picture.jpg" alt="Majidul Islam Murad - AI Engineer and MLOps Expert in Bangladesh" class="img-fluid img-rounded" loading="lazy">
+                    <div class="right-box-pro wow fadeIn" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); padding: 30px; border-radius: 15px; box-shadow: 0 10px 30px rgba(0,0,0,0.2);">
+                        <img src="uploads/profile_picture.png" alt="Majidul Islam Murad - AI Engineer and MLOps Expert in Bangladesh" class="img-fluid img-rounded" loading="lazy" style="border-radius: 15px; box-shadow: 0 5px 20px rgba(0,0,0,0.15); mix-blend-mode: lighten; background: transparent;">
                     </div><!-- end media -->
                 </div><!-- end col -->
             </div><!-- end row -->
@@ -275,7 +295,7 @@ Header Section Start
 		<div class="container">
 			<div class="section-title text-left">
                 <h2>AI Projects by Majidul Islam Murad</h2>
-                <p>My key AI, automation, and healthcare projects developed in Bangladesh.</p>
+                <p>My key projects</p>
             </div><!-- end title -->
 			
 			<div class="gallery-menu row">
@@ -428,7 +448,6 @@ Header Section Start
 							<li style="margin-bottom: 4px; display: list-item;">Leadership & Discipline: Rigorous military training, leadership, teamwork, decision-making</li>
 							<li style="margin-bottom: 4px; display: list-item;">Maritime & Tactical Training: Naval operations, navigation, combat strategies</li>
 							<li style="margin-bottom: 4px; display: list-item;">Strategic Planning & Crisis Management: High-pressure scenario training</li>
-							<li style="margin-bottom: 4px; display: list-item;">Technical & Weaponry Knowledge: Maritime technology, weapon systems, naval engineering</li>
 							<li style="margin-bottom: 4px; display: list-item;">Ethics & Professionalism: Discipline, integrity, service to the nation</li>
 						</ul>
 					</div>
