assistant add Xavier

--- a/index.html
+++ b/index.html
@@ -592,6 +592,21 @@
 			}, 300);
 		});
 	</script>
+
+	<!-- ElevenLabs AI Chat Widget -->
+	<elevenlabs-convai agent-id="agent_2601kc9hb6g6f3stxqws9qrtt09j" action-text="Hi, I am Xavier! Need help?">
+	</elevenlabs-convai>
+	<script src="https://elevenlabs.io/convai-widget/index.js" async></script>
+
+	<style>
+		/* Position ElevenLabs widget */
+		elevenlabs-convai {
+			position: fixed;
+			bottom: 80px;
+			right: 20px;
+			z-index: 9999;
+		}
+	</style>
 </body>
 
 </html>
