--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 						<p>Led the development of agent-based AI systems for healthcare and education,
 							enabling adaptive conversation flows and preventive care planning using
 							multi-agent CrewAI systems.</p>
-						<a href="uploads/MajidIslamResume.pdf" class="btn-cv" download>
+						<a href="uploads/mIslam.pdf" class="btn-cv" download>
 							<i class="fa fa-download"></i> Download CV
 						</a>
 					</div>
